--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <!-- This div has all bar element -->
             <div class="haveNeed">
               <!-- You will have bar -->
-              <div class="need" style="margin-top: 100px">
+              <div class="need" style="margin-top: 40px">
                 <div class="need-bar">
                   <div class="need-amount">0.70M</div>
 
@@ -371,7 +371,7 @@
                   Total Investment Amount
                 </p>
               </div>
-              <div class="have" style="margin-top: 100px">
+              <div class="have" style="margin-top: 40px">
                 <!-- Main Bar -->
                 <div class="have-bar">
                   <!-- Amount Show -->
@@ -397,7 +397,7 @@
             <img src="" alt="" />
           </div> -->
 
-          <div>
+          <div class="lekha">
             <p
               style="
                 border: 1px solid red;
