--- a/index.html
+++ b/index.html
@@ -340,9 +340,9 @@
           <!-- Vertically Up Down progress bar -->
           <div class="verticale-progress">
             <div class="title">
-              <h3>
+              <h3 class="investmentTitle1">
                 Value of Your Investment <br />
-                <span style="margin-left: 40px">after</span>
+                <span class="afterInvest">after</span>
                 <span
                   class="retireAgeShow"
                   style="font-family: 'Lato', sans-serif !important"
@@ -355,7 +355,7 @@
             <!-- This div has all bar element -->
             <div class="haveNeed">
               <!-- You will have bar -->
-              <div class="need" style="margin-top: 40px">
+              <div class="need" style="margin-top: 60px">
                 <div class="need-bar">
                   <div class="need-amount">0.70M</div>
 
@@ -371,7 +371,7 @@
                   Total Investment Amount
                 </p>
               </div>
-              <div class="have" style="margin-top: 40px">
+              <div class="have" style="margin-top: 60px">
                 <!-- Main Bar -->
                 <div class="have-bar">
                   <!-- Amount Show -->
@@ -391,24 +391,13 @@
 
               <!-- You will need bar -->
             </div>
-            <hr />
           </div>
           <!-- <div>
             <img src="" alt="" />
           </div> -->
 
           <div class="lekha">
-            <p
-              style="
-                border: 1px solid red;
-                margin: 10px;
-                padding: 10px;
-                color: red;
-                text-align: center;
-                font-weight: bold;
-                font-family: 'Lato', sans-serif !important;
-              "
-            >
+            <p class="lekhaRes">
               ইউসিবির ওপেন-এন্ড ফান্ডের SIP Scheme এ বিনিয়োগের ক্ষেত্রে Compound
               Annual Growth Rate (CAGR) ১২% হিসাবে টাকার পরিমাণ গণনা করা হয়েছে ।
               প্রকৃত টাকার পরিমাণ অর্থনীতি ও পুঁজিবাজারের উপর নির্ভর করে ভিন্ন
