--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                       border-radius: 25px;
                       margin-right: 12px;
                       height: 40px;
-                      width: 120px;
+                      width: auto;
                       text-align: center;
                       margin-top: 5px;
 
@@ -86,7 +86,7 @@
                       border-radius: 25px;
                       margin-right: 12px;
                       height: 40px;
-                      width: 230px;
+                      width: auto;
                       text-align: center;
                       margin-top: 5px;
                       font-family: 'Lato', sans-serif;
@@ -397,18 +397,32 @@
           </div> -->
 
           <div class="lekha">
-            <p class="lekhaRes">
-              ইউসিবির ওপেন-এন্ড ফান্ডের SIP Scheme এ বিনিয়োগের ক্ষেত্রে Compound
-              Annual Growth Rate (CAGR) ১২% হিসাবে টাকার পরিমাণ গণনা করা হয়েছে ।
-              প্রকৃত টাকার পরিমাণ অর্থনীতি ও পুঁজিবাজারের উপর নির্ভর করে ভিন্ন
-              হতে পারে ।
+            <p class="lekhaRes" style="font-family: 'Lato', sans-serif">
+              ইউসিবির ওপেন-এন্ড ফান্ডের
+              <span style="font-weight: bold">SIP Scheme</span> এ বিনিয়োগের
+              ক্ষেত্রে
+              <span style="font-weight: bold; font-family: 'Lato', sans-serif"
+                >Compound Annual Growth Rate (CAGR)</span
+              >
+              ১২% হিসাবে টাকার পরিমাণ গণনা করা হয়েছে । প্রকৃত টাকার পরিমাণ
+              অর্থনীতি ও পুঁজিবাজারের উপর নির্ভর করে ভিন্ন হতে পারে ।
               <br />
               <br />
-              পুঁজিবাজারে বিনিয়োগ ঝুঁকিপূর্ণ । জেনে ও বুঝে বিনিয়োগ করুন ।
+              <span style="font-weight: bold; font-family: 'Lato', sans-serif"
+                >পুঁজিবাজারে বিনিয়োগ ঝুঁকিপূর্ণ । জেনে ও বুঝে বিনিয়োগ করুন
+                ।</span
+              >
               <br />
-              <br />
-              Mutual Fund investments are subject to market risks, read all
-              scheme related documents carefully.<br />
+              <span
+                style="
+                  font-size: 16px;
+                  font-weight: bold;
+                  font-family: 'Lato', sans-serif;
+                "
+              >
+                Mutual Fund investments are subject to market risks, read all
+                scheme related documents carefully.</span
+              ><br />
             </p>
           </div>
           <!-- Horizontally Progress bar -->
