--- a/index.html
+++ b/index.html
@@ -399,8 +399,10 @@
           <div class="lekha">
             <p class="lekhaRes" style="font-family: 'Lato', sans-serif">
               ইউসিবির ওপেন-এন্ড ফান্ডের
-              <span style="font-weight: bold">SIP Scheme</span> এ বিনিয়োগের
-              ক্ষেত্রে
+              <span style="font-weight: bold; font-family: 'Lato', sans-serif"
+                >SIP Scheme</span
+              >
+              এ বিনিয়োগের ক্ষেত্রে
               <span style="font-weight: bold; font-family: 'Lato', sans-serif"
                 >Compound Annual Growth Rate (CAGR)</span
               >
